# kernel-builder

./: .gitignore  Dockerfile  Makefile  README.md  build-kernel.py  build-kernel.sh  go.sh  grsecurity-urls.py  pyproject.toml  upload-kernels.py
.circleci/: config.yml
.github/workflows/: ci.yml
configs/: config-securedrop-5.15  config-securedrop-5.4  config-securedrop-6.6  config-workstation-4.14  config-workstation-5.15  config-workstation-6.6  tinyconfig  tinyconfig-5.15  tinyconfig-6.6
debian/: arch.j2  changelog.in  changelog.j2  control.in  control.j2  control.server  control.workstation  copyright  rules  rules.vars.j2
debian/securedrop-grsec/DEBIAN/: postinst
debian/securedrop-grsec/etc/sysctl.d/: 30-securedrop.conf
patches/: 0000-debian-reproducibility.patch  0030-e1000e-initial-support-for-i219-LM-3.patch  0031-e1000e-Initial-support-for-KabeLake.patch  0032-e1000e-Initial-Support-for-CannonLake.patch  0033-e1000e-Initial-Support-for-IceLake.patch  0034-intel-add-SPDX-identifiers-to-all-the-Intel-drivers.patch  0035-net-intel-Cleanup-the-copyright-license-headers.patch  0036-e1000e-Add-support-for-Comet-Lake.patch  0037-e1000e-Add-support-for-Tiger-Lake.patch  0038-e1000e-Add-support-for-Alder-Lake.patch  0039-e1000e-Add-support-for-Tiger-Lake-device.patch  0040-e1000e-Add-support-for-Meteor-Lake.patch
pubkeys/: kroah_hartman.gpg  spender.gpg
scripts/: build-kernel-wrapper  mkdebian  mkdebian-6.6  reproducibility-test  rules-6.6
securedrop-grsec/DEBIAN/: postinst
securedrop-workstation-grsec/DEBIAN/: postinst
